# litefs-rust-api-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  litefs.yml  output.sql  prepush.sh
migrations/: 20240205192254_users.sql
src/: main.rs
templates/: index.html
