[package]
name = "litefs-rust-api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs","set-header"] }
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "sqlite" ] }
dotenv = "0.15.0"
tower = { version = "0.4.13" }
minijinja = { version = "1.0.12", features = ["loader", "v_htmlescape", "multi_template"] }
